force-app/main/default/objects/Opportunity/fields/Altele__c.field-meta.xml
<CustomField>
    <fullName>Altele__c</fullName>
    <label>Altele</label>
    <length>255</length>
    <type>Text</type>
</CustomField>