force-app/main/default/objects/Opportunity/fields/Financiar__c.field-meta.xml
<CustomField>
    <fullName>Financiar__c</fullName>
    <label>Financiar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>