force-app/main/default/objects/Opportunity/fields/Motiv_pierdere__c.field-meta.xml
<CustomField>
    <fullName>Motiv_pierdere__c</fullName>
    <label>Motiv pierdere</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Termen de plata</fullName>
            </value>
            <value>
                <fullName>Servicii livrate</fullName>
            </value>
            <value>
                <fullName>Limita de credit</fullName>
            </value>
            <value>
                <fullName>Pret</fullName>
            </value>
            <value>
                <fullName>Altele</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>