force-app/main/default/objects/Opportunity/fields/Nume_competitor__c.field-meta.xml
<CustomField>
    <fullName>Nume_competitor__c</fullName>
    <label>Nume competitor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>