force-app/main/default/objects/Opportunity/fields/Pret__c.field-meta.xml
<CustomField>
    <fullName>Pret__c</fullName>
    <label>Pret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>