force-app/main/default/objects/Opportunity/fields/Produs__c.field-meta.xml
<CustomField>
    <fullName>Produs__c</fullName>
    <label>Produs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>