force-app/main/default/objects/Opportunity/fields/Servicii__c.field-meta.xml
<CustomField>
    <fullName>Servicii__c</fullName>
    <label>Servicii</label>
    <length>255</length>
    <type>Text</type>
</CustomField>